test/libsolidity/syntaxTests/iceRegressionTests/calling_external_function_via_parameter_with_invalid_type.sol
contract C {
    function f(
        function() external returns (function() internal) getCallback
    ) public {
        getCallback();
    }
}
// ----
// TypeError 2582: (66-86): Internal type cannot be used for external function type.
